<resources>
    <string name="app_name">CyChore</string>
    <string name="title_activity_try_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_uname_null">Please enter email address</string>
    <string name="login_pwd_null">Please enter password</string>
    <string name="msg_login_success">Login success!</string>
    <string name="title_activity_usr_default_page">UsrDefaultPage</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_group">Group</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="login_email_null">Please enter email address.</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="reg_password_not_match">\"Confirmed password not match\"</string>
    <string name="invalid_email_address">Invalid Email address</string>
    <string name="reg_password_too_short">\"Password too short\"</string>
    <string name="cant_reach_server">Can not connect to Server, please try later.</string>
    <string name="save_pwd">Save Password</string>
    <string name="auto_login">Auto login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_name_null">Task name cannot be empty</string>
    <string name="invalid_task_name">Task name invalid</string>
    <string name="title_activity_admin_default_page">AdminDefaultPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Issues">Issues</string>
    <string name="msg_send_null">Please enter your message.</string>
    <string name="old_password_not_match">Current password not match</string>
    <string name="title_listing">Housing</string>
</resources>
