<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/icons8todolist"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_group"
        android:icon="@drawable/icons8group"
        android:title="@string/title_group" />

    <item
        android:id="@+id/navigation_listing"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_listing" />

    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_profile" />
</menu>
