<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tasks">

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.CyChore.ui.tasksTab.TasksList"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.example.CyChore.ui.groupTab.GroupTabFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group_tab" />

    <fragment
        android:id="@+id/navigation_listing"
        android:name="com.example.CyChore.ui.listingTab.ListingFragement"
        android:label="@string/title_listing"
        tools:layout="@layout/fragment_listing" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.example.CyChore.ui.chatTab.ChatTabFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.CyChore.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_option" />
</navigation>